src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/NotString.deca
//Description:
//  Vérification contextuelle de l'opérateur ! sur un type string
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type boolean attendu

{
   !"true";
}